# isa

./: .gitignore  Cargo.toml  LICENSE  README.md
grammar/: grammar.md
in/: in.isa  input.isa  list.isa  match.isa  monad.isa  prelude.isa
src/: ast.rs  checker.rs  cli.rs  ctx.rs  driver.rs  error.rs  global.rs  intern.rs  lexer.rs  lib.rs  main.rs  parser.rs  report.rs  span.rs  token.rs  types.rs
src/compiler/: ast.rs  checker.rs  ctx.rs  env.rs  error.rs  infer.rs  lexer.rs  mod.rs  parser.rs  subs.rs  token.rs  types.rs
src/compiler/ast/: ast.rs  mod.rs  typed.rs  untyped.rs
src/compiler/exhaust/: ctor.rs  mod.rs  pat.rs
src/compiler/snapshots/: isa__compiler__lexer__tests__calls-2.snap  isa__compiler__lexer__tests__calls-2.snap.new  isa__compiler__lexer__tests__calls-3.snap  isa__compiler__lexer__tests__calls-3.snap.new  isa__compiler__lexer__tests__calls.snap  isa__compiler__lexer__tests__calls.snap.new  isa__compiler__lexer__tests__char_errors-2.snap  isa__compiler__lexer__tests__char_errors-2.snap.new  isa__compiler__lexer__tests__char_errors-3.snap  isa__compiler__lexer__tests__char_errors-3.snap.new  isa__compiler__lexer__tests__char_errors-4.snap  isa__compiler__lexer__tests__char_errors-4.snap.new  isa__compiler__lexer__tests__char_errors-5.snap  isa__compiler__lexer__tests__char_errors-5.snap.new  isa__compiler__lexer__tests__char_errors-6.snap  isa__compiler__lexer__tests__char_errors.snap  (+508 more)
src/driver/: cli.rs  mod.rs
src/index/: mod.rs  slice.rs  vec.rs
stdlib/: list.isa  monad.isa  ops.isa  option.isa  prelude.isa  result.isa  string.isa
