[package]
name = "isa"
version = "0.1.0"
edition = "2024"

[dependencies]
codespan-reporting = "0.12.0"
rustc-hash = "2.1.1"
smallvec = "1.15.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
enum_glob_use = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
type_complexity = "allow"

# false positive
needless_collect = "allow"
