[package]
name = "isa"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
codespan-reporting = "0.12.0"
rustc-hash = "2.1.1"

# [profile.release]
# lto = true
# codegen-units = 1

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
enum_glob_use = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
type_complexity = "allow"
too_many_arguments = "allow"

# false positive
needless_collect = "allow"

[dev-dependencies]
insta = "1.43.1"
